make left and right file complete

--- a/src/components/Left.css
+++ b/src/components/Left.css
@@ -7,3 +7,13 @@
     border-radius: 20px;
     width: 160px;
 }
+ 
+  
+  
+  
+  .sidebar-closed {
+    transform: translateX(-100%); /* Hide when closed */
+  }
+  
+   
+  
