complete Home compnents

--- a/src/components/Feed.css
+++ b/src/components/Feed.css
@@ -9,3 +9,46 @@
     border-radius: 30px;
     width: 25px;
  }
+
+ .icon{
+    display: flex;
+    gap:20px;
+ }
+ .icons{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 30px;
+ }
+ #post{
+    background: skyblue;
+    border-radius: 20px;
+    width: 80px;
+    padding-left: 18px;
+    padding-top: 2px;
+    height: 30px;
+ }
+
+ .message{
+    display: flex;
+    justify-content: space-between;
+ }
+ .user{
+    display: flex;
+    gap: 10px;
+ }
+ #img-user{
+    border-radius: 25px;
+ }
+ #clg{
+    
+    position: relative;
+    bottom: 20px;
+ }
+ #commit{
+    margin-left: 40px;
+ }
+ .icon-commit{
+   display: flex;
+   justify-content: space-between;
+   margin-left: 45px;
+ }
