--- a/src/components/Right.css
+++ b/src/components/Right.css
@@ -7,20 +7,31 @@
 #searche{
     font-size: 1.80em;
     position: relative;
-    left: 40px;
+    left: 20px;
+    top: 30px;
 }
-#content{
-    padding-left: 20px;
-}
-#sub{
-    border-radius: 15px;
-    background: black;
-    width: 120px;
-}
-.what{
+
+#followers{
     display: flex;
-     
+    justify-content: space-between;
+
 }
-#happ{
-    margin-left: 130px;
+#foll-img{
+    border-radius: 360px;
+    height: 42px;
+}
+   
+#div-profile{
+    display: flex;
+    gap: 10px;
+}
+#gmail{
+    position: relative;
+    bottom: 20px;
+}
+#btn{
+    width: 100px;
+    border-radius: 20px;
+    background: #000;
+    color: white;
 }
